<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout1"
        android:orientation="vertical"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/electricIcon"
                android:src="@drawable/dashboard_electricity"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/electricity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/electricIcon"
                android:layout_alignBottom="@+id/electricIcon"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:layout_toRightOf="@+id/electricIcon"
                android:text="@string/electricity"
                android:gravity="center"
                android:textColor="@color/Blue"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:layout_toRightOf="@+id/location_icon"
                android:id="@+id/state_et"
                android:textSize="16sp"
                android:textIsSelectable="true"
                android:focusable="false"
                android:background="@null"
                android:hint="Select State"
                android:textColorHint="@color/Blue"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Blue"
                android:id="@+id/state_view"
                android:layout_below="@+id/location_icon" > </View>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/location_icon"
                android:id="@+id/location_icon"
                android:layout_above="@+id/state_et"
                android:layout_alignParentLeft="true"
                android:layout_alignBottom="@+id/state_et"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:layout_toRightOf="@+id/stateboard_icon"
                android:id="@+id/stateboard_et"
                android:textSize="16sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:visibility="gone"
                android:textIsSelectable="true"
                android:focusable="false"
                android:singleLine="true"
                android:background="@null"
                android:layout_below="@+id/state_et"
                android:hint="Select Board"
                android:textColorHint="@color/Blue" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Blue"
                android:visibility="gone"
                android:id="@+id/stateboard_view"
                android:layout_below="@+id/stateboard_icon" > </View>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/elec_board_icon"
                android:id="@+id/stateboard_icon"
                android:visibility="gone"
                android:layout_above="@+id/stateboard_et"
                android:layout_alignParentLeft="true"
                android:layout_alignBottom="@+id/stateboard_et"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/service_no_lyt"
                android:layout_below="@+id/stateboard_view"
                android:layout_marginTop="@dimen/padding_15dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/smartcard_img"
                    android:src="@drawable/smart_card_no"> </ImageView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/consumer_number"
                    android:textColor="@color/Blue"
                    android:textSize="16sp"
                    android:textColorHint="@color/Blue"
                    android:inputType="number"
                    android:visibility="visible"
                    android:maxLength="16"
                    android:id="@+id/consumer_number"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/padding_15dp"> </EditText>

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@+id/service_no_lyt"
                android:id="@+id/number_view"
                android:background="@color/Blue"
                android:visibility="gone" >  </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/con_number_hint_tv"
                android:textColor="@color/red"
                android:visibility="gone"
                android:layout_below="@+id/number_view"> </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:layout_toRightOf="@+id/mobile_icon"
                android:id="@+id/mobile_et"
                android:textSize="16sp"
                android:maxLines="1"
                android:inputType="number"
                android:ellipsize="end"
                android:visibility="gone"
                android:singleLine="true"
                android:background="@null"
                android:layout_below="@+id/service_no_lyt"
                android:hint="Mobile Number"
                android:maxLength="10"
                android:textColorHint="@color/Blue" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Blue"
                android:visibility="gone"
                android:id="@+id/mobile_view"
                android:layout_below="@+id/mobile_icon" > </View>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/mobileicon"
                android:id="@+id/mobile_icon"
                android:visibility="gone"
                android:layout_above="@+id/mobile_et"
                android:layout_alignParentLeft="true"
                android:layout_alignBottom="@+id/mobile_et"/>


        </RelativeLayout>

<!--        <include-->
<!--            android:id="@+id/consumer_details_lyt"-->
<!--            android:visibility="gone"-->
<!--            layout="@layout/electricity_consumer_details_lyt"> </include>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/amount_lyt"
            android:visibility="gone">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/amount"
                android:id="@+id/amount_icon"> </ImageView>

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:textColor="@color/Blue"
                android:inputType="number"
                android:maxLength="7"
                android:textColorHint="@color/Blue"
                android:textSize="20sp"
                android:background="@null"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="gone"
            android:background="@color/Blue"
            android:id="@+id/amount_divider_view"> </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/msgtext"
            android:textColor="#FE4A4A"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            android:textSize="12sp"
            android:layout_gravity="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:background="@drawable/proceed_button_background"
            android:visibility="gone"
            android:textSize="16sp"
            android:text="@string/proceed"
            android:textColor="@color/white"
            android:layout_below="@+id/amountlayout"
            android:id="@+id/continue_button"/>

        <RadioGroup
            android:id="@+id/radioGrpCommission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/radio_withcommission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="With Commission"
                android:checked="false"/>

            <RadioButton
                android:id="@+id/radio_withoutcommission"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Without Commission"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/commissiontext"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:text="Your service provider will be updated within 3 Working Days!"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/withoutcommissiontext"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:text="Your service provider will be updated within 24 Hours!"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:background="@drawable/proceed_button_background"
            android:visibility="gone"
            android:textSize="15sp"
            android:text="@string/paymentbtn"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:layout_below="@+id/amountlayout"
            android:id="@+id/payment_button"/>

    </LinearLayout>

</ScrollView>